manifests/deployment-postgres.yml
apiVersion: v1
kind: Namespace
metadata:
  name: developmentsql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: developmentsql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
