manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-app
  namespace: development
spec:
  selector:
    app: demo-app
  ports:
    - name: nginx
      port: 8080
